--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Gamedoanchu">
-        <activity android:name=".Doanchu.Choigame"
+        <activity android:name=".Doanchu.Choigame">
+
+
+        </activity>
+        <activity
+            android:name=".Doanchu.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".Doanchu.MainActivity">
-
 
         </activity>
     </application>
