--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,30 +4,32 @@
     package="com.example.gamedoanchu">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.Gamedoanchu">
         <activity
+            android:name=".Doanchu.Activity"
+            android:exported="false" />
+        <activity
             android:name=".Draw.Display"
             android:exported="false"
-            tools:ignore="Instantiatable">
-
-        </activity>
+            tools:ignore="Instantiatable" />
         <activity
             android:name=".Draw.MainActivity_vehinh"
-            android:exported="false">
+            android:exported="false" />
+        <activity android:name=".Doanchu.Choigame"
+           >
 
         </activity>
-
-        <activity android:name=".Doanchu.Choigame"></activity>
         <activity
             android:name=".Doanchu.MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
